fixes background pattern -- (left edge was getting cut off)

--- a/src/sass/partials/components/_filters.scss
+++ b/src/sass/partials/components/_filters.scss
@@ -2,7 +2,6 @@
 @import '../utils/variables';
 
 #filter {
-  background-color: #FBFAF7;
   // margin-top: 20px;
   padding-bottom: 20px;
   font-family: 'Novecento Sans';
@@ -59,7 +58,7 @@ li.filter-type {
   color: #737272;
   font-size: 11px;
   text-transform: uppercase;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   font-weight: 400;
   padding: 3px 5px 2px;
   // margin-left: 5px;
